# commands-create

./: .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/: __init__.py
nagare/admin/: app_create.py
src/nagare/admin/: create.py
