[metadata]
name = nagare-commands-app-create
author = Net-ng
author_email = alain.poirier@net-ng.com
description = `app create` admin command
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/commands-app-create
    Tracker = https://github.com/nagareproject/commands-app-create/issues

[options]
zip_safe = False
packages = find:
install_requires =
    pyyaml
    cookiecutter
    nagare-config
    nagare-commands-base
    nagare-server

[options.entry_points]
nagare.commands =
    app = nagare.admin.app_create:Commands

nagare.commands.app =
    create = nagare.admin.app_create:Create
    upgrade = nagare.admin.app_create:Upgrade

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
